Successful execution of GraalVM 25. Startup ime reduced rom 4.497 sec to 0.333 sec